--- a/views/eventos.html
+++ b/views/eventos.html
@@ -92,7 +92,7 @@
 		<p>Telefono: +54 1136962316</p>
 	</div>
 	<div class="emails">
-		<p>ESCRIBINOS</p><br>
+		<p id="escribinos">ESCRIBINOS</p>
 		<p>contacto.sushilin@gmail.com</p>
 		<p>contacto.sushilin2@gmail.com</p>
 	</div>
