--- a/views/promociones.html
+++ b/views/promociones.html
@@ -5,106 +5,120 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sushi Lin - Promociones</title>
 	<link rel="shortcut icon" href="..//img/favicon.png">
+	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/style.css">
 </head>
-<body id="promociones">
-	<nav>
-		<div class="navegador1">
-		<a class="navegador__imagen" href="../index.html">
-			<img id="logo" src="../img/favicon.png" alt="Logo sushi lin shushilin"></a>
-		<h1 class="navegador__texto">Sushi Lin</h1>
-		</div>
-		<ul class="navegador2">
-			<li><a href="../views/menu.html"> Menu</a></li>
-			<li><a href="../views/promociones.html">Promociones</a></li>
-			<li><a href="../views/locales.html">Locales</a></li>
-			<li><a href="../views/eventos.html">Eventos y Catering</a></li>
-		</ul>
-	</nav>
-	<!-- end nav -->
-<main class="promociones__total">
-<div class="promociones__imagen">
-	<img class="promociones__img" src="../img/promociones.jpg" alt="sushi">
-</div>
-<div class="promociones">
-	<h2>Promociones</h2>
-	<section><h3>TABLA SALMON</h3>
-		<table border="1px"	cellpadding="1px">
-			<tr>
-				<th>Cantidad</th>
-				<th>Descripcion</th>
-				<th>Precio</th>
-			</tr>
-			<tr>
-				<td>x15</td>
-				<td>5 Buenos Aires, 5 New York, 2 Niguiri, 3 Sashimi </td>
-				<td>$1.600.-</td>
-			</tr>
-			<tr>
-				<td>x30</td>
-				<td>8 Buenos Aires, 8 New York, 5 Tamago, 3 Niguiri, 3 Geisha, 3 Sashimi</td>
-				<td>$3.000.-</td>
-			</tr>
-			<tr>
-				<td>x40</td>
-				<td>8 Buenos Aires, 8 New York, 8 Tamago, 5 Honey, 5 Niguiri, 3 Geisha, 3 Sashimi </td>
-				<td>$3.600.-</td>
-			</tr>
-		</table>
-	</section>
-	<section> <h3>TABLA COMBINADA</h3>
-		<table border="1px"	cellpadding="1px">
-			<tr>
-				<th>Cantidad</th>
-				<th>Descripcion</th>
-				<th>Precio</th>
-			</tr>
-			<tr>
-				<td>x15</td>
-				<td>5 Buenos Aires, 5 California, 2 Niguiri, 3 Sashimi </td>
-				<td>$1.400.-</td>
-			</tr>
-			<tr>
-				<td>x30</td>
-				<td>8 Buenos Aires, 8 California, 5 Ibiza, 3 Niguiri, 3 Geisha, 3 Sashimi</td>
-				<td>$2.650.-</td>
-			</tr>
-			<tr>
-				<td>x40</td>
-				<td>8 Buenos Aires, 8 New York, 8 Ibiza, 5 Tuna, 5 Niguiri, 3 Geisha, 3 Sashimi </td>
-				<td>$3.400.-</td>
-			</tr>
-		</table>
-	</section>
-	<section><h3>TABLA VEGGIE</h3>
-		<table border="1px" cellspacing="1px">
-			<tr>
-				<th>Cantidad</th>
-				<th>Descripcion</th>
-				<th>Precio</th>
-			</tr>
-			<tr>
-				<td>x15</td>
-				<td>5 Mango, 5 Veggie, 3 Vegan, 2 Niguiri AVO</td>
-				<td>$1.250.-</td>
-			</tr>
-			<tr>
-				<td>x30</td>
-				<td>8 Mango, 8 Veggie, 5 Vegan, 3 Chic, 3 Niguiri AVO, 3 Geisha Kiuri</td>
-				<td>$2400.-</td>
-			</tr>
-			<tr>
-				<td>x40</td>
-				<td>8 Mango, 8 Veggie, 5 Vegan, 5 Chic, 5 Cucumber, 5 Niguiri AVO, 4 Geisha Kiuri </td>
-				<td>$3100.-</td>
-			</tr>
-		</table>
-	</section>
+<body>
+<!-- inicio NAV -->
+	<nav class="navbar navbar-expand-lg navbar navbar-dark bg-nav sticky-top">
+  		<div class="container-fluid">
+   	 		<a class="navbar-brand d-flex align-items-end" href="../index.html"> <img src="../img/logo.png" class="rounded-pill boton" id="logo" alt="Logo sushi lin shushilin">
+		 	</a>
+    		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      		<span class="navbar-toggler-icon"></span>
+    		</button>
+    	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+     		<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        		<li class="nav-item mx-4">
+         		 <a class="nav-link active" aria-current="page" href="../views/menu.html">Menu</a>
+        		</li>
+        		<li class="nav-item  mx-4">
+         		 <a class="nav-link active" href="../views/promociones.html">Promociones</a>
+        		</li>
+        		</li>
+        		<li class="nav-item  mx-4">
+         		 <a class="nav-link active" href="../views/locales.html">Locales</a>
+        		</li>
+        		</li>
+        		<li class="nav-item mx-4">
+         		 <a class="nav-link active" href="../views/eventos.html">Eventos y Catering</a>
+        		</li>
+        	</ul>
+        </div>
+  </div>
+</nav>
+<!-- end nav -->
+<main class="row w-100 pt-0 text-center mx-auto"><h2 class="py-3 mb-0 fs-1">Promociones</h2>
+<!-- INICIA CARDS I -->
+	<div class="card mb-2 pt-3 col-md-6 col-lg-3" id="bg-grey">
+	  <img src="../img/promo1.jpg" class="card-img-top w-50 mx-auto" alt="sushi lin sushilin promo1 seleccion">
+	  <div class="card-body">
+	        <h3 class="card-title">Selección 12 piezas</h3>
+	        <p>5 New York phila, 5 Tropical, 2 Niguiri salmón</p>
+	      <a href="#" class="btn btn-primary botonPromo" id="bg-grey">Agregar al carrito</a>
+	  </div>
 	</div>
-	<div id="promociones__boton">	
-		<a href="../views/locales.html">
-		<img class="boton"src="../img/haztupedido2.png" alt="haz tu pedido sushi lin"></a>
+	<!-- END CARDS I -->
+	<!-- INICIA CARDS II -->
+	<div class="card mb-2 pt-3 col-md-6 col-lg-3" id="bg-grey">
+	  <img src="../img/promo2.jpg" class="card-img-top w-50 mx-auto" alt="sushi lin sushilin promo2 seleccion">
+	  <div class="card-body">
+	        <h3 class="card-title">Selección I 15 piezas</h3>
+	        <p>5 New York phila, 5 Spring, 5 Golden</p>
+	      <a href="#" class="btn btn-primary botonPromo" id="bg-grey">Agregar al carrito</a>
+	  </div>
 	</div>
+	<!-- END CARDS II -->
+	<!-- INICIA CARDS III -->
+	<div class="card mb-2 pt-3 col-md-6 col-lg-3" id="bg-grey">
+	  <img src="../img/promo3.jpg" class="card-img-top w-50 mx-auto" alt="sushi lin sushilin promo3 seleccion">
+	  <div class="card-body">
+	        <h3 class="card-title">Selección II 30 piezas</h3>
+	        <p>5 New York phila, 5 Spring, 5 Dos salmones, 5 Tropical, 5 Huancainos, 2 Niguiri de langostinos, 1 Niguiri de salmón, 2 Geishas de salmón</p>
+	      <a href="#" class="btn btn-primary botonPromo" id="bg-grey">Agregar al carrito</a>
+	  </div>
+	</div>
+	<!-- END CARDS III -->
+	<!-- INICIA CARDS IV -->
+	<div class="card mb-2 pt-3 col-md-6 col-lg-3" id="bg-grey">
+	  <img src="../img/promo4.jpg" class="card-img-top w-50 mx-auto" alt="sushi lin sushilin promo4 seleccion">
+	  <div class="card-body">
+	        <h3 class="card-title">Selección III 60 piezas</h3>
+	        <p> 10 New York phila, 10 Dos salmones, 10 Fabric langostino, 5 Huancaino, 5 Ibiza, 5 Sashimi Spicy, 5 Niguiri de salmón, 5 Niguiri langostino, 5 Tropic</p>
+	      <a href="#" class="btn btn-primary botonPromo" id="bg-grey">Agregar al carrito</a>
+	  </div>
+	</div>
+	<!-- END CARDS IV -->
+	<!-- INICIA CARDS V -->
+	<div class="card pt-3 col-md-6 col-lg-3" id="bg-grey">
+	  <img src="../img/promo5.jpg" class="card-img-top w-50 mx-auto" alt="sushi lin sushilin Omakase Matsuri">
+	  <div class="card-body">
+	        <h3 class="card-title">Omakase Matsuri 30 piezas</h3>
+	        <p> 5 New York Phila, 5 Tropical, 5 2 Salmones, 5 Ibiza con lango hervido, 2 Niguiri de salmón, 2 Niguiri Taré, 2 Niguiri Lima, 2 Sashimis de salmón, 2 Sashimis spicy</p>
+	      <a href="#" class="btn btn-primary botonPromo" id="bg-grey">Agregar al carrito</a>
+	  </div>
+	</div>
+	<!-- END CARDS V -->
+	<!-- INICIA CARDS VI -->
+	<div class="card pt-3 col-md-6 col-lg-3" id="bg-grey">
+	  <img src="../img/promo6.jpg" class="card-img-top w-50 mx-auto" alt="sushi lin sushilin Niguiri Moriawase">
+	  <div class="card-body">
+	        <h3 class="card-title">Niguiri Moriawase 12 piezas</h3>
+	        <p> 3 Niguiri Lima, 3 Niguiri Taré, 3 Niguiri Huanca, 3 Niguiri Tokio</p>
+	      <a href="#" class="btn btn-primary botonPromo" id="bg-grey">Agregar al carrito</a>
+	  </div>
+	</div>
+	<!-- END CARDS VI-->
+	<!-- INICIA CARDS VII -->
+	<div class="card pt-3 col-md-6 col-lg-3" id="bg-grey">
+	  <img src="../img/promo7.jpg" class="card-img-top w-50 mx-auto" alt="sushi lin sushilin Tokusen">
+	  <div class="card-body">
+	        <h3 class="card-title">Tokusen</h3>
+	        <p>5 Ebi Nikkei, 5 Tataki Truffle, 2 Crispy Rice, 3 Niguiri de Salmón</p>
+	      <a href="#" class="btn btn-primary botonPromo" id="bg-grey">Agregar al carrito</a>
+	  </div>
+	</div>
+	<!-- END CARDS VII -->
+	<!-- INICIA CARDS VIII -->
+	<div class="card pt-3 col-md-6 col-lg-3" id="bg-grey">
+	  <img src="../img/promo8.jpg" class="card-img-top w-50 mx-auto" alt="sushi lin sushilin veggie">
+	  <div class="card-body">
+	        <h3 class="card-title">Veggie 20 piezas</h3>
+	        <p>5 Mango Roll, 5 Asana Roll, 5 Vegetarian Roll, 5 Niguiri Avo</p>
+	      <a href="#" class="btn btn-primary botonPromo" id="bg-grey">Agregar al carrito</a>
+	  </div>
+	</div>
+	<!-- END CARDS VIII -->
 </main>
 <!-- end main -->
 
@@ -130,6 +144,6 @@
 	<a href="https://www.instagram.com/lin.sushi/" target="_blank"><img class="boton" src="../img/ig.png" alt="instagram ig sushi lin" width="60"height="60"></a>
 	</div>
 </footer>
-
+<script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
